--- a/books_authors/templates/book.html
+++ b/books_authors/templates/book.html
@@ -8,6 +8,27 @@
     <title>Document</title>
 </head>
 <body>
+    
+    
+    <div class="modal fade" id="myModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="exampleModalLabel">Confirm Delete</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    Are you sure?
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                    
+                    <a id="modalbutton" href="#" role="button" type="button" class="btn btn-primary" aria-pressed="true">Save changes</a>
+                    
+                </div>
+            </div>
+        </div>
+    </div>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark ">
         <div class="container-fluid">
             <a class="navbar-brand" href="#">Navbar</a>
@@ -48,12 +69,14 @@
                         </tr>
                         {%for author in book.authors.all%}
                         <tr>
-                            <td>{{author.first_name}}  {{author.last_name}}</td>
+                            <td>{{author.first_name}}  {{author.last_name}} <button data-url="/byn/delete/{{author.id}}/{{book.id}}" type="button" class="btn btn-danger btndelete" data-bs-toggle="modal" data-bs-target="#myModal">
+                                X
+                            </button></td>
                             
                         </tr>
-                    
-                    
-                    {%endfor%}
+                        
+                        
+                        {%endfor%}
                     </table>
                 </div>
             </div>
@@ -73,10 +96,18 @@
                     <p class="text-center"></p><button type="submit" class="btn btn-primary">Submit</button></p>
                 </div>
             </form>
-            </div>
-            </div>
-            
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-U1DAWAznBHeqEIlVSCgzq+c9gqGAJn5c/t99JyeKa9xxaYpSvHU5awsuZVVFIhvj" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script>
+        $(".btndelete").on("click",function(){
+            const url=$(this).attr("data-url")
+            
+            $("#modalbutton").attr("href",url)
+        })
+
+    </script>
 </body>
 </html>
